Dev_K8s/chewata-front_end-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chewata-frontend-deployment
  namespace: default
  labels:
    app: chewata-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: chewata-frontend
  template:
    metadata:
      labels:
        app: chewata-frontend
    spec:
      containers:
      - name: chewata-frontend
        image: emanuelafro/chewata_chat_app-frontend:1.0.1
        ports:
          - containerPort: 3000
        resources:
          limits:
            cpu: "2"
            memory: "2Gi"
          requests:
            cpu: "500m"
            memory: "1Gi"
