Dev_K8s/chewata-front_end-service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: chewata-frontend-service
  namespace: chewata-chat-app
  labels:
    app: chewata-frontend
spec:
  type: ClusterIP
  selector:
    app: chewata-frontend 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
