Dev_K8s/chewata-grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: chewata-grafana-ingress
  namespace: chewata-monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target:
spec:
  rules:
    - host: grafana.local
      http: 
        paths: 
          - path: /
            pathType: Prefix
            backend: 
              service:
                name: chewata-monitoring-grafana
                port:
                  number: 80
